# photo-orientation

./: .gitignore  Makefile  README.md  pyproject.toml
src/photo_orientation/: __init__.py  getorientation.py  getset.py  setorientation.py
